--- a/assets/stylesheets/layout/_footer.scss
+++ b/assets/stylesheets/layout/_footer.scss
@@ -66,7 +66,7 @@ $height--desktop: $line-height * 3rem;
 	@media screen and (min-width: breakpoint('tablet')) {
 		float: left;
 
-		margin-bottom: $line-height * 5em;
+		margin-bottom: $line-height * 3em;
 	}
 }
 
@@ -145,7 +145,7 @@ $height--desktop: $line-height * 3rem;
 
 	display: flex;
 
-	align-items: center;
+	align-items: flex-start;
 
 	width: auto;
 
@@ -219,7 +219,6 @@ $height--desktop: $line-height * 3rem;
 
 	@media screen and (min-width: breakpoint('desktop')) {
 		float: left;
-
 	}
 }
 
